[tool.poetry]
name = "app-fastapi"
version = "0.1.0"
description = ""
authors = ["GhortheBrute <143045110+GhortheBrute@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
httpx = "^1.0.0b0"
black = "==25.1.0"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
anyio = "==4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
